<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.umitems.espresso.automatetestingworkshop.WelcomeActivity">

    <Button
        android:text="Button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:id="@+id/btnHello"
        app:layout_constraintLeft_toLeftOf="@+id/activity_welcome"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_welcome"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_welcome"
        android:layout_marginEnd="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="511dp"
        android:id="@+id/guideline"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:relativePercent="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvWelcome"
        app:layout_constraintLeft_toLeftOf="@+id/btnHello"
        app:layout_constraintTop_toBottomOf="@+id/btnHello"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/btnHello" />
</android.support.constraint.ConstraintLayout>
</layout>