...

    <EditText
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:text="@{user.firstName}"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        android:layout_marginEnd="16dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="0dp"
...
