<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraintLayout">

    <TextView
        android:text="TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>